# ChangeLog for dev-cpp/libgtksourceviewmm
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libgtksourceviewmm/Attic/ChangeLog,v 1.12 2008/09/30 17:25:42 jer Exp $

  30 Sep 2008; Jeroen Roovers <jer@gentoo.org>
  libgtksourceviewmm-0.3.1.ebuild:
  Stable for HPPA (bug #229709).

  03 Aug 2008; Tiziano Müller <dev-zero@gentoo.org>
  +files/0.3.1-missing_includes.patch, libgtksourceviewmm-0.3.1.ebuild:
  Added patch to fix compilation issues with gcc-4.3.x

  19 May 2008; Rémi Cardona <remi@gentoo.org>
  -libgtksourceviewmm-1.9.4.ebuild:
  slot 2 is now provided by dev-cpp/gtksourceviewmm, libgtksourceview needs
  to be lastrited

*libgtksourceviewmm-1.9.4 (07 Apr 2008)

  07 Apr 2008; Rémi Cardona <remi@gentoo.org>
  +libgtksourceviewmm-1.9.4.ebuild:
  bump to 1.9.4, slotted as 2.0

  10 Oct 2007; Rémi Cardona <remi@gentoo.org>
  -libgtksourceviewmm-0.2.0.ebuild, -libgtksourceviewmm-0.3.0.ebuild,
  -libgtksourceviewmm-0.3.0-r1.ebuild, libgtksourceviewmm-0.3.1.ebuild:
  update gtksourceview deps (see bug #195366), prune old versions

  10 Jul 2007; Jeroen Roovers <jer@gentoo.org>
  libgtksourceviewmm-0.3.1.ebuild:
  Marked ~hppa too (dev-util/nemiver).

*libgtksourceviewmm-0.3.1 (10 Jun 2007)

  10 Jun 2007; Remi Cardona <remi@gentoo.org>
  +libgtksourceviewmm-0.3.1.ebuild:
  bump to 0.3.1

  13 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

*libgtksourceviewmm-0.3.0-r1 (06 Feb 2007)

  06 Feb 2007; Remi Cardona <remi@gentoo.org>
  +libgtksourceviewmm-0.3.0-r1.ebuild:
  fixing configure option for doxygen dep, fixes bug #164327

*libgtksourceviewmm-0.3.0 (21 Jan 2007)

  21 Jan 2007; Remi Cardona <remi@gentoo.org>
  +libgtksourceviewmm-0.3.0.ebuild:
  bumping libgtksourceviewmm to 0.3.0

  20 Dec 2006; Daniel Gryniewicz <dang@gentoo.org>
  libgtksourceviewmm-0.2.0.ebuild:
  Keyword ~amd64

*libgtksourceviewmm-0.2.0 (17 Dec 2006)
