@@ -1,6 +1,10 @@
 # ChangeLog for dev-cpp/libgtksourceviewmm
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libgtksourceviewmm/Attic/ChangeLog,v 1.12 2008/09/30 17:25:42 jer Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libgtksourceviewmm/Attic/ChangeLog,v 1.13 2010/07/20 15:16:25 jer Exp $
+
+  20 Jul 2010; Jeroen Roovers <jer@gentoo.org>
+  libgtksourceviewmm-0.3.1.ebuild:
+  Drop HPPA keywording (bug #324511).
 
   30 Sep 2008; Jeroen Roovers <jer@gentoo.org>
   libgtksourceviewmm-0.3.1.ebuild:
